Работа над проектом
- можно тестировать, но еще много чего не хватает

--- a/.gitignore
+++ b/.gitignore
@@ -8,3 +8,10 @@ concrete.rcc
 concrete6.dat
 persist.dat
 pyplc_develop
+backup
+slave.dat
+krax.dat
+persist.json
+src.dat
+master.dat
+slave_conf.dat
