Устойчивый релиз, кандидат на сдачу
при тестах есть проблемы
- окно подтверждения заказа во время выгрузки нарушает отчеты
- ХД#8-10 имеют проблемы с пуском при 0 заданиях

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -21,7 +21,7 @@
             "console": "integratedTerminal",
             "justMyCode": false,
             "env": {"PYTHONPYCACHEPREFIX":"${workspaceFolder}/__pycache__"},
-            "args": ["--conf","slave","--port","9005","--cli","2456"]
+            "args": ["--conf","slave_conf","--port","9005","--cli","2456"]
         },
         {
             "name": "Simulator",
