Улучшил контроль за отладкой
в связи с необходимостью проверить что происходит с затвором ДЦ-1
потребовалось отдельно запустить логику и визуализацию. Как затвор
открылся, закрыл визуализацию и снова открыл. Затвор показывает закрыт.
Предположительно что то с имитацией, опросом

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -52,6 +52,15 @@
             "justMyCode": false,
             "env": {"PYTHONPYCACHEPREFIX":"${workspaceFolder}/__pycache__"},
             "args": []
-        }
-    ]
+        },
+        {
+            "name": "Runtime Local",
+            "type": "debugpy",
+            "request": "launch",
+            "module": "gui",
+            "console": "integratedTerminal",
+            "justMyCode": false,
+            "env": {"PYTHONPYCACHEPREFIX":"${workspaceFolder}/__pycache__"},
+            "args": ["--device","127.0.0.1","--slave","127.0.0.1"]
+        }    ]
 }
